--- a/6 webtech.html
+++ b/6 webtech.html
@@ -6,88 +6,104 @@
     <title>Web Technology</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* General Styles */
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
             color: #333;
+            position: relative;
+            min-height: 100vh;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('xx.webp') no-repeat center center fixed;
+            background-size: cover;
+            opacity: 0.2;
+            z-index: -1;
         }
 
         header {
-            background-color: #333;
-            color: white;
+            background-color: #ffffff;
+            color: #6a0dad; 
             padding: 20px 0;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         nav {
-            background-color: #4CAF50;
+            display: inline-flex;
+            justify-content: center;
+            background-color: #6a0dad; 
             padding: 10px 0;
-            text-align: center;
         }
 
         nav a {
             color: white;
+            padding: 14px 20px;
             text-decoration: none;
-            padding: 12px 20px;
-            font-size: 18px;
+            text-align: center;
             transition: background-color 0.3s;
         }
 
         nav a:hover {
-            background-color: #45a049;
+            background-color: #ddd;
+            color: #6a0dad; 
         }
 
         section {
             padding: 20px;
             margin: 20px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: rgba(255, 255, 255, 0.8); 
             border-radius: 8px;
-        }
-
-        h1, h2, h3 {
-            color: #333;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
-            border-bottom: 2px solid #4CAF50;
+            color: #6a0dad; 
+            border-bottom: 2px solid #6a0dad;
             padding-bottom: 10px;
         }
 
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #333;
+            background-color: #6a0dad; 
             color: white;
             position: relative;
             bottom: 0;
             width: 100%;
         }
 
-        ul {
-            list-style-type: square;
-            margin-left: 20px;
+        .image-container {
+            width: 100%;
+            text-align: center;
+            margin-top: 40px;
         }
 
-        code {
-            background-color: #f4f4f4;
-            padding: 2px 4px;
-            border-radius: 4px;
-            font-size: 16px;
+        .image-container img {
+            width: 50%; 
+            max-width: 600px;
+            height: auto;
+            border-radius: 8px;
         }
 
-        /* Media Queries for Mobile Devices */
+        /* Media Queries */
         @media (max-width: 768px) {
             nav {
-                padding: 15px 0;
+                flex-direction: column;
             }
 
             nav a {
                 padding: 10px;
-                font-size: 16px;
+                width: 100%;
+                text-align: left;
             }
 
             section {
